--- a/index.html
+++ b/index.html
@@ -1,5 +1,58 @@
 <!DOCTYPE html>
-<html>
-<head><title>Test</title></head>
-<body><h1>Bienvenue !</h1></body>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Ma Boutique</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="#">🛍️ Ma Boutique</a>
+    <div class="d-flex">
+      <a href="cart.html" class="btn btn-outline-light position-relative">
+        🛒 Panier <span id="cart-count" class="badge bg-danger position-absolute top-0 start-100 translate-middle">0</span>
+      </a>
+    </div>
+  </div>
+</nav>
+
+<!-- Hero -->
+<div class="bg-light py-5">
+  <div class="container text-center">
+    <h2>Bienvenue dans notre boutique</h2>
+    <p>Découvrez nos produits exceptionnels sélectionnés pour vous</p>
+  </div>
+</div>
+
+    <div class="container my-5">
+  <div class="row mb-3">
+    <div class="col-md-6 offset-md-3">
+      <input type="text" id="search-input" class="form-control" placeholder="🔍 Rechercher un produit...">
+    </div>
+  </div>
+  <div class="row" id="products-container"></div>
+  <div id="pagination" class="d-flex justify-content-center mt-4"></div>
+</div>
+
+
+
+
+<!-- Produits -->
+<div class="container my-5">
+  <div class="row" id="products-container"></div>
+  <div id="pagination" class="d-flex justify-content-center mt-4"></div>
+</div>
+
+<footer class="bg-dark text-light py-4">
+  <div class="container text-center">
+    &copy; 2025 Ma Boutique. Tous droits réservés.
+  </div>
+</footer>
+
+<script src="js/main.js"></script>
+</body>
 </html>
