--- a/cart.html
+++ b/cart.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Panier</title>
+  <title>Shopping cart</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  
+<header class="bg-light border-bottom py-4">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">🛍️ Ma Boutique</a>
-      <div class="d-flex">
-        <a href="cart.html" class="btn btn-outline-light position-relative">
-          🛒 Panier <span id="cart-count" class="badge bg-danger position-absolute top-0 start-100 translate-middle">0</span>
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo.png" alt="Logo" width="100" height="80" class="me-2" />
+        <span class="fw-bold text-primary" >HM Shop</span>
+      </a>
+
+      <div>
+        <a href="cart.html" class="btn btn-outline-secondary me-2">
+          🛒 Cart <span id="cart-count" class="badge bg-danger">0</span>
         </a>
+        <a href="login.html" class="btn btn-outline-primary">Login</a>
       </div>
     </div>
-  </nav>
+  </header>
+
+
 
   <div class="container my-5">
-    <h2 class="text-center mb-4">🛒 Votre Panier</h2>
+    <h2 class="text-center mb-4">🛒 Your Shopping cart </h2>
 
     <div class="text-end mb-3">
-      <button class="btn btn-outline-danger" onclick="clearCart()">Vider le panier</button>
+      <button class="btn btn-outline-danger" onclick="clearCart()">Empty the cart</button>
     </div>
 
     <div class="row" id="cart-items"></div>
