--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ma Boutique</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-  <div class="container">
-    <a class="navbar-brand" href="#">🛍️ Ma Boutique</a>
-    <div class="d-flex">
-      <a href="cart.html" class="btn btn-outline-light position-relative">
-        🛒 Panier <span id="cart-count" class="badge bg-danger position-absolute top-0 start-100 translate-middle">0</span>
+  <header class="bg-light border-bottom py-4">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo.png" alt="Logo" width="100" height="80" class="me-2" />
+        <span class="fw-bold text-primary" >HM Shop</span>
       </a>
+
+      <div>
+        <a href="cart.html" class="btn btn-outline-secondary me-2">
+          🛒 Cart <span id="cart-count" class="badge bg-danger">0</span>
+        </a>
+        <a href="login.html" class="btn btn-outline-primary">Login</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Layout with sidebar and products -->
+  <div class="container-fluid mt-4">
+    <div class="row">
+      <!-- Sidebar -->
+      <aside class="col-md-3">
+        <ul class="list-group">
+          <a class="list-group-item active" href="Categories.html">Categories</a>
+          <li ></li>
+          <li class="list-group-item">Electronics</li>
+          <li class="list-group-item">Clothing</li>
+          <li class="list-group-item">Home & Garden</li>
+          <li class="list-group-item">Beauty</li>
+        </ul>
+      </aside>
+
+      <!-- Product Section -->
+      <main class="col-md-9">
+        <!-- Search Bar -->
+        <div class="mb-3">
+          <input type="text" id="search-input" class="form-control" placeholder="🔍 Search for a product..." />
+        </div>
+
+        <!-- Product Grid -->
+        <div class="row" id="products-container">
+          <!-- JS will insert products here -->
+        </div>
+
+        <!-- Pagination -->
+        <div id="pagination" class="d-flex justify-content-center mt-4"></div>
+      </main>
     </div>
   </div>
-</nav>
 
-<!-- Hero -->
-<div class="bg-light py-5">
-  <div class="container text-center">
-    <h2>Bienvenue dans notre boutique</h2>
-    <p>Découvrez nos produits exceptionnels sélectionnés pour vous</p>
-  </div>
-</div>
-
-    <div class="container my-5">
-  <div class="row mb-3">
-    <div class="col-md-6 offset-md-3">
-      <input type="text" id="search-input" class="form-control" placeholder="🔍 Rechercher un produit...">
+  <!-- Footer -->
+  <footer class="bg-dark text-light py-4 mt-5">
+    <div class="container text-center">
+      &copy; HM Shop. All rights reserved.
     </div>
-  </div>
-  <div class="row" id="products-container"></div>
-  <div id="pagination" class="d-flex justify-content-center mt-4"></div>
-</div>
+  </footer>
 
-
-
-
-<!-- Produits -->
-<div class="container my-5">
-  <div class="row" id="products-container"></div>
-  <div id="pagination" class="d-flex justify-content-center mt-4"></div>
-</div>
-
-<footer class="bg-dark text-light py-4">
-  <div class="container text-center">
-    &copy; 2025 Ma Boutique. Tous droits réservés.
-  </div>
-</footer>
-
-<script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
