--- a/product.html
+++ b/product.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Détails du produit</title>
+  <title>Product details </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <header class="bg-light border-bottom py-4">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo.png" alt="Logo" width="100" height="80" class="me-2" />
+        <span class="fw-bold text-primary" >HM Shop</span>
+      </a>
+
+      <div>
+        <a href="cart.html" class="btn btn-outline-secondary me-2">
+          🛒 Cart <span id="cart-count" class="badge bg-danger">0</span>
+        </a>
+        <a href="login.html" class="btn btn-outline-primary">Login</a>
+      </div>
+    </div>
+  </header>
+
   <div class="container my-5" id="product-details">
-    <p>Chargement...</p>
+    <p>Loading ...</p>
   </div>
 
   <div class="text-center my-4">
   <a href="index.html" class="btn btn-outline-secondary">
-    ← Retour à la boutique
+    ← Back to the shop 
   </a>
     </div>
 
